--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ li{
     color: aliceblue;
     padding: 1rem 2rem;
     margin: 0 1rem;
+    cursor: pointer;
 }
 .centrarDiv button:hover{
     background-color: rebeccapurple;
